--- a/external/storm-kafka/pom.xml
+++ b/external/storm-kafka/pom.xml
@@ -27,6 +27,7 @@
 
     <packaging>jar</packaging>
     <artifactId>storm-kafka</artifactId>
+    <version>0.9.5.atdixon-enhancements</version>
     <name>storm-kafka</name>
     <description>Storm Spouts for Apache Kafka</description>
     <build>
@@ -112,7 +113,7 @@
         <dependency>
             <groupId>org.apache.storm</groupId>
             <artifactId>storm-core</artifactId>
-            <version>${project.version}</version>
+            <version>${project.parent.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
