--- a/external/storm-kafka/pom.xml
+++ b/external/storm-kafka/pom.xml
@@ -27,7 +27,7 @@
 
     <packaging>jar</packaging>
     <artifactId>storm-kafka</artifactId>
-    <version>0.9.5.atdixon-enhancements</version>
+    <version>0.9.5-atdixon-enhancements-1</version>
     <name>storm-kafka</name>
     <description>Storm Spouts for Apache Kafka</description>
     <build>
